--- a/2224/Jenkinsfile
+++ b/2224/Jenkinsfile
@@ -16,8 +16,8 @@ pipeline {
     }
 
     environment {
-        // DOCKERHUB_USERNAME = ""
-        // GITHUB_USERNAME = ""
+        DOCKERHUB_USERNAME = "ktemple77"
+        GITHUB_USERNAME = "ktemple77"
 
         GITHUB_URL = "https://github.com/${GITHUB_USERNAME}/kubernetes-anotherclass-sprint2.git"
 
