--- a/2232/deploy/helm/api-tester/values-dev.yaml
+++ b/2232/deploy/helm/api-tester/values-dev.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 image:
   repository: 1pro/api-tester
   pullPolicy: Always
-  tag: 1.1.1-260131.185926
+  tag: 1.0.0
 
 resources:
   limits:
